# SmartCropper

./: .gitattributes  README.md  README_EN.md  build.gradle  gradle.properties  settings.gradle
aar/: smartcropperlib.aar
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/me/pqpo/smartcropper/: App.java  CropActivity.java  MainActivity.java
app/src/main/res/layout/: activity_crop.xml  activity_main.xml
app/src/main/res/values/: attrs.xml  strings.xml
app/src/main/res/xml/: file_paths.xml
art/: SmartCropperSample.apk  SmartCropperSampleV5.apk
edge_detection/: .gitignore  const.py  evaluate.py  finetuning.py  freeze_model.py  generate_batch_data.py  hed_net.py  image_threshold.py  simple_maker.py  util.py
edge_detection/finetuning_model/: checkpoint  hed.ckpt-finetuning.data-00000-of-00001  hed.ckpt-finetuning.index
gradle/wrapper/: gradle-wrapper.properties
smartcropperlib/: CMakeLists.txt  build.gradle  proguard-rules.pro
smartcropperlib/opencv/include/opencv2/: opencv.hpp
smartcropperlib/src/main/: AndroidManifest.xml
smartcropperlib/src/main/assets/models/: hed_lite_model_quantize.tflite
smartcropperlib/src/main/cpp/: Scanner.cpp  android_utils.cpp  smart_cropper.cpp
smartcropperlib/src/main/cpp/include/: Scanner.h  android_utils.h
smartcropperlib/src/main/java/me/pqpo/smartcropperlib/: ImageDetector.java  SmartCropper.java
smartcropperlib/src/main/java/me/pqpo/smartcropperlib/utils/: CropUtils.java
smartcropperlib/src/main/java/me/pqpo/smartcropperlib/view/: CropImageView.java
smartcropperlib/src/main/res/values/: attrs.xml  strings.xml
